--- a/Clase 1-2 - ES6/ES6 Playground Blank/index.html
+++ b/Clase 1-2 - ES6/ES6 Playground Blank/index.html
@@ -17,10 +17,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to the machine</h1>
+      <h1>texto predefinido/h1>
       <p>Open the console and start coding (CMD + SHIFT + C)</p>
     </div>
     <script type="module" src="assets/js/main.js"></script>
   </body>
-  
+
 </html>
